--- a/template.html
+++ b/template.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+    <nav class="navbar navbar-dark fixed-top bg-dark  flex-md-nowrap p-0 shadow">
   <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="https://getbootstrap.com/docs/4.3/examples/dashboard/#">Company name</a>
   <!--<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">-->
   <!--<ul class="navbar-nav px-3">
@@ -139,7 +139,7 @@ $INIT$  </script>
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Dashboard</h1>
+        <h1 class="h2">$PTITLE$</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group mr-2">
             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
@@ -178,7 +178,7 @@ $INIT$  </script>
                    </script>
                   </div>
                  </div>
-                 <div class="table-responsive ">
+                 <div class="table-responsive">
                   $BODY$
                  </div>
                  <br />
@@ -193,7 +193,6 @@ $INIT$  </script>
             <div class="clr"></div>
 
    <script type="text/javascript">
-   <!-- локализация панели -->
    document.getElementById("l_help").innerHTML = window.l_help;
    document.getElementById("l_help2").innerHTML = window.l_help;
    document.getElementById("l_forum").innerHTML = window.l_forum;
